[package]
name = "rust-cxx-stuff"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "grpc-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "grpc-client"
path = "src/client.rs"

[dependencies]
cxx = "1.0"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
cxx-build = "1.0"
tonic-build = "0.9"